# DescKGC

./: .buildinfo  .flake8  .gitignore  .kgc_config.yaml  DescKGC.html  DescKGC.procedures.align_across_subgraphs.html  DescKGC.procedures.build_config.html  DescKGC.procedures.extract_and_insert.html  DescKGC.procedures.html  DescKGC.procedures.sync_embedding.html  DescKGC.scripts.html  DescKGC.tools.align.html  DescKGC.tools.arxiv.html  DescKGC.tools.chroma.html  DescKGC.tools.config_manager.html  DescKGC.tools.db_manager.html  DescKGC.tools.extractor.html  DescKGC.tools.html  DescKGC.tools.neo4j.html  Installation.html  README.md  config.yaml  deployment.ps1  deployment.sh  environment.yml  genindex.html  index.html  installdoc.html  main.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  setup.py  testdoc.html
.github/: workflows
AutoKGC/: .kgc_config.yaml
KGC/: main.py  template.py
_modules/: index.html
_sources/: DescKGC.procedures.sync_embedding.rst.txt  DescKGC.rst.txt  DescKGC.scripts.rst.txt  DescKGC.tools.config_manager.rst.txt  DescKGC.tools.db_manager.rst.txt  DescKGC.tools.rst.txt  index.rst.txt  installdoc.rst.txt  quickstart.rst.txt  testdoc.rst.txt
docker/: Dockerfile  docker-compose.yml
doctrees/: DescKGC.doctree  DescKGC.procedures.align_across_subgraphs.doctree  DescKGC.procedures.build_config.doctree  DescKGC.procedures.doctree  DescKGC.procedures.extract_and_insert.doctree  DescKGC.procedures.sync_embedding.doctree  DescKGC.scripts.doctree  DescKGC.tools.align.doctree  DescKGC.tools.arxiv.doctree  DescKGC.tools.chroma.doctree  DescKGC.tools.config_manager.doctree  DescKGC.tools.db_manager.doctree  DescKGC.tools.doctree  DescKGC.tools.extractor.doctree  DescKGC.tools.neo4j.doctree  Installation.doctree  environment.pickle  index.doctree  modules.doctree  quickstart.doctree
html/: DescKGC.scripts.html  (+14 more)
(+167 files in other folders)
