[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "AutoKGC"
version = "0.0.3"
description = "Automatic Knowledge Graph Construction"
authors = ["Hao Chen <guangchen811@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["AutoKGC"]
scripts = { autokgc = "AutoKGC.scripts.cli:main" }

[tool.poetry.dependencies]
python = "^3.8.1"
pyyaml = "6.0"
chromadb = "0.3.26"
neo4j = "5.7.0"
langchain = "0.0.234"
pydantic = "1.10.8"
arxiv = "1.4.7"