[tool.poetry]
name = "autokgc"
version = "0.1.0"
description = "AutoKGC is a python package for knowledge graph automically construction."
authors = ["guangchen <guangchen811@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
arxiv = "^1.4.7"
chromadb = "0.3.26"
langchain = "^0.0.274"
pytest = "^7.4.0"
PyYAML = "^6.0"
pydantic = "1.10.8"
neo4j = "5.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.plugins."console_scripts"]
autokgc = "AutoKGC.scripts.cli:main"
